# ultimate-design-scraper

./: .gitignore  README.md  batch_extractor.py  design_extractor.py  extract.js  hello.py  links.example.txt  package.json  process_html_with_gemini.py  prompt_generator.py  pyproject.toml  requirements.txt
