[project]
name = "ultimate-design-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "playwright>=1.40.0",
    "rich>=13.0.0",
    "scikit-learn>=1.3.0",
    "urllib3>=1.26.0",
]
